Integration of Login, Forget Password , Register Code - Routing and Navigation

--- a/frontend/src/app/Component/Auth/forget-password/forget-password.component.scss
+++ b/frontend/src/app/Component/Auth/forget-password/forget-password.component.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .forgot-container {
-  @apply flex items-center justify-center min-h-screen bg-gray-100;
+  @apply flex items-center justify-center bg-gray-100;
 }
 
 .forgot-box {
