--- a/frontend/src/app/Component/Core/footer/footer.component.scss
+++ b/frontend/src/app/Component/Core/footer/footer.component.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .footer {
-  @apply bg-gray-800 text-white text-center py-4 mt-10;
+  @apply bg-gray-800 text-white text-center py-4;
 }
 
 .container {
