--- a/frontend/src/app/Component/Programs/list/list.component.scss
+++ b/frontend/src/app/Component/Programs/list/list.component.scss
@@ -11,6 +11,13 @@
 .title {
   @apply text-2xl font-bold mb-4;
 }
+.no-item {
+  display: flex;
+      min-height: 10em;
+      justify-content: center;
+      align-items: center;
+  @apply text-2xl font-bold mb-4;
+}
 
 .add-btn {
   @apply bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition float-right mb-4;
