--- a/frontend/src/app/Component/Programs/form/form.component.html
+++ b/frontend/src/app/Component/Programs/form/form.component.html
@@ -1,14 +1,14 @@
 <div class="container">
-    <h2 class="title">{{ programId ? 'Edit' : 'Add' }} Program</h2>
-  
-    <form [formGroup]="programForm" (ngSubmit)="saveProgram()" class="form">
+  <h2 class="title">{{ programId ? 'Edit' : 'Add' }} Program</h2>
+
+  <form [formGroup]="programForm" (ngSubmit)="saveProgram()" class="form">
       <input type="text" formControlName="name" placeholder="Program Name" class="input">
       <textarea formControlName="description" placeholder="Description" class="input"></textarea>
-      <input type="date" formControlName="startDate" class="input">
-      <input type="date" formControlName="endDate" class="input">
+      <input type="date" formControlName="startDate" class="input" [min]="minDate" placeholder="Start Date">
+      <input type="date" formControlName="endDate" class="input" [min]="programForm.get('startDate')?.value"  placeholder="End Date">
+
       <input type="number" formControlName="budget" placeholder="Budget" class="input">
-  
+
       <button type="submit" class="submit-btn">{{ programId ? 'Update' : 'Create' }} Program</button>
-    </form>
-  </div>
-  
+  </form>
+</div>
