--- a/frontend/src/app/Component/Participant/list/list.component.html
+++ b/frontend/src/app/Component/Participant/list/list.component.html
@@ -26,10 +26,10 @@
       </tbody>
     </table>
   
-    <div class="pagination">
+    <!-- <div class="pagination">
       <button *ngFor="let page of [].constructor(totalPages); let i = index" (click)="changePage(i+1)" [class.active]="currentPage === i+1">
         {{ i + 1 }}
       </button>
-    </div>
+    </div> -->
   </div>
   
