--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.error{
+    color: red;
+}
+input[type="date"]::before {
+    content: attr(placeholder);
+    color: #999;
+  }
+  
